# C-20-2a-New-Features

./: README.md
Code Files/: CMakeLists.txt
Code Files/common/: inc.hpp
Code Files/section_2/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp
Code Files/section_3/: CMakeLists.txt  example_1.cpp  example_2.cpp
Code Files/section_4/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
Code Files/section_5/: CMakeLists.txt  M.cpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  string_operations.cpp  sysinfo.cpp  sysinfo2.cpp  sysinfo2_impl.cpp  sysinfo_arch.cpp  sysinfo_cpu.cpp
Code Files/section_6/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
Code Files/section_7/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp
Code Files/section_8/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  generator.hpp
Code Files/section_9/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
