add_executable (section_4_ex_1 example_1.cpp)
add_executable (section_4_ex_2 example_2.cpp)
add_executable (section_4_ex_3 example_3.cpp)
add_executable (section_4_ex_4 example_4.cpp)
#target_link_libraries(section_4_ex_1 PRIVATE fmt::fmt-header-only)
#target_link_libraries(section_4_ex_2 PRIVATE fmt::fmt-header-only)


 
 
